--- a/.gitignore
+++ b/.gitignore
@@ -166,3 +166,4 @@ data/barcelona_copenhagen_portsmouth
 data/newdelhi_saoluis_brasilia_rio
 data/berlin
 data/newyork_sandiego_sydney
+external_tests/images
